--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta charset="utf-8"/>
     <title>Welcome to Craft CMS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <meta name="referrer" content="origin-when-cross-origin" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"/>
+    <meta name="referrer" content="origin-when-cross-origin"/>
     <style>
         html,
         body {
@@ -103,7 +103,7 @@
             padding-right: calc(35px + env(safe-area-inset-right));
         }
 
-        @media (min-width:480px) {
+        @media (min-width: 480px) {
             body {
                 background-image: url("{{ view.getAssetManager().getPublishedUrl('@app/web/assets/installer/dist', true, 'images/install-bg-1920.png') }}");
                 background-repeat: no-repeat;
@@ -118,7 +118,7 @@
             }
         }
 
-        @media (min-width:480px) and (min-height: 376px) {
+        @media (min-width: 480px) and (min-height: 376px) {
             #container {
                 padding: 24px;
                 align-items: center;
@@ -140,7 +140,7 @@
             }
         }
 
-        @media (min-width:768px) {
+        @media (min-width: 768px) {
             #modal {
                 display: flex;
             }
@@ -162,11 +162,7 @@
             }
         }
 
-        @media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (min-width: 961px),
-        only screen and (-moz-min-device-pixel-ratio: 1.5) and (min-width: 961px),
-        only screen and (-o-min-device-pixel-ratio: 3/2) and (min-width: 961px),
-        only screen and (min-device-pixel-ratio: 1.5) and (min-width: 961px),
-        only screen and (min-resolution: 1.5dppx) and (min-width: 961px) {
+        @media only screen and (-webkit-min-device-pixel-ratio: 1.5) and (min-width: 961px), only screen and (-moz-min-device-pixel-ratio: 1.5) and (min-width: 961px), only screen and (-o-min-device-pixel-ratio: 3/2) and (min-width: 961px), only screen and (min-device-pixel-ratio: 1.5) and (min-width: 961px), only screen and (min-resolution: 1.5dppx) and (min-width: 961px) {
             body {
                 background-image: url("{{ view.getAssetManager().getPublishedUrl('@app/web/assets/installer/dist', true, 'images/install-bg-5120.png') }}");
             }
@@ -202,7 +198,8 @@
                     <li><a href="http://craftcms.stackexchange.com/" target="_blank">Stack Exchange</a><br><small>Get help and help others.</small></li>
                     <li><a href="https://craftquest.io/" target="_blank">CraftQuest</a><br><small>Watch unlimited video lessons and courses.</small></li>
                     <li><a href="http://craftlinklist.com/" target="_blank">Craft Link List</a><br><small>Stay in-the-know.</small></li>
-                    <li><a href="https://nystudio107.com/blog" target="_blank">nystudio107 Blog</a><br><small>Learn Craft and modern web development.</small></li>
+                    <li><a href="https://nystudio107.com/blog" target="_blank">nystudio107 Blog</a><br><small>Learn Craft and modern web development.</small>
+                    </li>
                 </ul>
             </div>
         </div>
