--- a/templates/index.twig
+++ b/templates/index.twig
@@ -36,7 +36,7 @@
     <script src="/assets/js/uikit.scrollspy.js"></script>
     <script src="/assets/js/scripts.js"></script>
     <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
 <div class="fullwidth clearfix">
