--- a/templates/index.twig
+++ b/templates/index.twig
@@ -30,13 +30,6 @@
     <meta name="theme-color" content="#ffffff">
     <!--[if IE]><![endif]-->
     <link rel="stylesheet" href="/assets/css/style.css">
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/countdown.js"></script>
-    <script src="/assets/js/owlcarousel.js"></script>
-    <script src="/assets/js/uikit.scrollspy.js"></script>
-    <script src="/assets/js/scripts.js"></script>
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
 <div class="fullwidth clearfix">
@@ -87,5 +80,26 @@
         </div>
     </div>
 </div>
+<script src="/assets/js/jquery.js"></script>
+<script src="/assets/js/countdown.js"></script>
+<script src="/assets/js/owlcarousel.js"></script>
+<script src="/assets/js/uikit.scrollspy.js"></script>
+<script src="/assets/js/scripts.js"></script>
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!-- Hotjar Tracking Code for itguys.ro -->
+<script>
+    (function (h, o, t, j, a, r) {
+        h.hj = h.hj || function () {
+            (h.hj.q = h.hj.q || []).push(arguments)
+        };
+        h._hjSettings = {hjid: 1826541, hjsv: 6};
+        a = o.getElementsByTagName('head')[0];
+        r = o.createElement('script');
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+</script>
 </body>
 </html>
