added cf web analytics

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -87,5 +87,8 @@
 <script src="/assets/js/scripts.js"></script>
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ce1c657f78fb46bd8109959682a2468f"}'></script>
+<!-- End Cloudflare Web Analytics -->
 </body>
 </html>
