--- a/templates/index.twig
+++ b/templates/index.twig
@@ -80,6 +80,28 @@
         </div>
     </div>
 </div>
+<!-- Messenger Chat plugin Code -->
+<div id="fb-root"></div>
+<script>
+    window.fbAsyncInit = function () {
+        FB.init({
+            xfbml: true,
+            version: 'v10.0'
+        });
+    };
+
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
+
+<!-- Your Chat plugin code -->
+<div class="fb-customerchat" attribution="page_inbox" page_id="155266177942956"></div>
 <script src="/assets/js/jquery.js"></script>
 <script src="/assets/js/countdown.js"></script>
 <script src="/assets/js/owlcarousel.js"></script>
@@ -87,6 +109,7 @@
 <script src="/assets/js/scripts.js"></script>
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
 <!-- Cloudflare Web Analytics -->
 <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ce1c657f78fb46bd8109959682a2468f"}'></script>
 <!-- End Cloudflare Web Analytics -->
