--- a/templates/index.twig
+++ b/templates/index.twig
@@ -112,6 +112,7 @@
 
 <!-- Cloudflare Web Analytics -->
 <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ce1c657f78fb46bd8109959682a2468f"}'></script>
+<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <!-- End Cloudflare Web Analytics -->
 </body>
 </html>
